[package]
name = "butil"
version = "0.1.0"
edition = "2024"

[lib]
name = "butil"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
async-trait = { version = "0.1.89" }
tokio-util = { version = "0.7.18", optional = true }
tokio = { version = "1.48.0", features = ["sync", "rt", "macros"] }
butil-macro = { path = "macro" }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.125.0", optional = true}
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0.145", optional = true }

[dependencies.sea-orm]
version = "2.0.0-rc"
optional = true
features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
]

[dependencies.lettre]
version = "0.11.19"
default-features = false
optional = true
features = [
  "tokio1-rustls",
  "builder",
  "smtp-transport",
  "rustls-native-certs",
  "aws-lc-rs",
  "file-transport"
]

[dependencies.redis]
version = "1"
optional = true
features = ["tokio-rustls-comp", "aio"]

[features]
default = ["db", "mail", "cache-store", "storage"]

db = ["db-pg", "db-sqlite"]
db-pg = [
  "sea-orm/sqlx-postgres",
  "db-base"
]
db-sqlite = [
  "sea-orm/sqlx-sqlite",
  "db-base"
]
db-base = [
  "sea-orm/runtime-tokio-rustls"
]

mail = [
  "mail-smtp",
  "mail-file"
]
mail-file = [
  "lettre/file-transport",
  "mail-base"
]
mail-smtp = [
  "lettre/smtp-transport",
  "lettre/rustls-native-certs",
  "lettre/aws-lc-rs",
  "mail-base"
]
mail-base = [
  "lettre/tokio1-rustls",
  "dep:tokio-util"
]

cache-store = [
  "cache-store-redis",
  "cache-store-memory"
]
cache-store-redis = ["dep:redis", "cache-store-base"]
cache-store-memory = ["cache-store-base"]
cache-store-base = ["dep:chrono", "dep:serde_json"]

storage = [
  "storage-local",
  "storage-s3"
]
storage-local = ["storage-base"]
storage-s3 = [
  "dep:aws-sdk-s3",
  "dep:aws-config",
  "storage-base"
]
storage-base = []
